syntax = "proto3";

message Configuration {
  enum ControllerButton {
    NONE = 0;
    LS = 1;//Stick Press
    RS = 2;
    LB = 3;//Bumper
    RB = 4;
    LT = 5;//Trigger
    RT = 6;
    A = 7;
    B = 8;
    X = 9;
    Y = 10;
    MENU = 11;
    VIEW = 12;
    XBOX = 13;
    
    LS0 = 16;//Stick Regions
    LS1 = 17;
    LS2 = 18;
    LS3 = 19;
    LS4 = 20;
    LS5 = 21;
    LS6 = 22;
    LS7 = 23;
    LS8 = 24;
    LS9 = 25;
    LSA = 26;
    LSB = 27;
    LSC = 28;
    LSD = 29;
    LSE = 30;
    LSF = 31;
    RS0 = 32;
    RS1 = 33;
    RS2 = 34;
    RS3 = 45;
    RS4 = 36;
    RS5 = 37;
    RS6 = 38;
    RS7 = 39;
    RS8 = 40;
    RS9 = 41;
    RSA = 42;
    RSB = 43;
    RSC = 44;
    RSD = 45;
    RSE = 46;
    RSF = 47;
  }
  
  enum ControllerSticks {
    NONE = 0;
    LEFTSTICK = 1;
    RIGHTSTICK = 2;
  }
  
  enum 
  
  
  message Stick {
    ControllerSticks s = 1;
    float threshold = 3;//how far must the stick go to count as moved
    bool move_mouse = 2;
  }
  
  message Binding {
    ControllerButton b = 1;
    bool active = 2;
  }
  
  map<ControllerButton,Binding> = 1;
  Stick Left = 2;
  Stick Right = 3;
  bool invert_UD_mouse = 4;
  bool invert_LR_mouse = 5;
  float sensitivity = 6;
}